[gd_scene load_steps=4 format=3 uid="uid://bgg417iwsyvcy"]

[ext_resource type="Script" path="res://Scripts/Enemies/FinalBoss.gd" id="1_i4h10"]
[ext_resource type="Texture2D" uid="uid://bewcxe2s2qd12" path="res://Assets/Sprites/Enemies/Boss_v1.png" id="2_cmlg3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lnduc"]
radius = 204.01

[node name="FinalBoss" type="CharacterBody2D" groups=["Enemies"]]
z_index = 10
collision_layer = 4
collision_mask = 14
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_i4h10")
MOVEMENT_SPEED = 120.0
ROTATION_SPEED = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.7, 0.7, 0.7, 1)
rotation = -1.5708
texture = ExtResource("2_cmlg3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_point_size = 15.0
debug_path_custom_line_width = 10.0

[node name="PathCalculationTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, -4)
shape = SubResource("CircleShape2D_lnduc")

[connection signal="timeout" from="PathCalculationTimer" to="." method="_on_path_calculation_timer_timeout"]
